--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+# 'version' sudah dihapus dari sini
 
 services:
   # Zookeeper for Kafka
@@ -53,6 +53,9 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
+    volumes:
+      - ./services:/opt/bitnami/spark/services
+      - ./data:/opt/bitnami/spark/data
 
   # Spark Worker
   spark-worker:
@@ -65,6 +68,10 @@ services:
       - SPARK_MASTER_URL=spark://spark-master:7077
       - SPARK_WORKER_MEMORY=2G
       - SPARK_WORKER_CORES=2
+    volumes:
+      - ./services:/opt/bitnami/spark/services
+      - ./data:/opt/bitnami/spark/data
 
 volumes:
   minio_data:
+  spark-master-data: {} # INI ADALAH PERBAIKANNYA
